--- a/subdownloader.desktop
+++ b/subdownloader.desktop
@@ -6,7 +6,7 @@ Name[en_GB]=SubDownloader
 Name[es]=SubDownloader
 Comment=Automatic download/upload subtitles for videofiles
 Comment[pl]=Automatycznie przesyłaj podpisy do plików wideo
-Exec=subdownloader $@
+Exec=subdownloader.sh $@
 Terminal=false
 Type=Application
 Icon=subdownloader.png
