- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    subdownloader.desktop -> 1.3

--- a/subdownloader.desktop
+++ b/subdownloader.desktop
@@ -1,6 +1,5 @@
 [Desktop Entry]
 Version=1.0
-Encoding=UTF-8
 Name=SubDownloader
 Name[en_GB]=SubDownloader
 Name[es]=SubDownloader
@@ -9,5 +8,5 @@ Comment[pl]=Automatycznie przesyłaj podpisy do plików wideo
 Exec=subdownloader.sh $@
 Terminal=false
 Type=Application
-Icon=subdownloader.png
+Icon=subdownloader
 Categories=GNOME;Application;AudioVideo;
