- removed invalid Application category
Changed files:
    subdownloader.desktop -> 1.4

--- a/subdownloader.desktop
+++ b/subdownloader.desktop
@@ -9,4 +9,5 @@ Exec=subdownloader.sh $@
 Terminal=false
 Type=Application
 Icon=subdownloader
-Categories=GNOME;Application;AudioVideo;
+Categories=GNOME;AudioVideo;
+# vi:encoding=utf-8
