--- a/subdownloader.desktop
+++ b/subdownloader.desktop
@@ -2,12 +2,12 @@
 Version=1.0
 Name=SubDownloader
 Name[en_GB]=SubDownloader
-Name[es]=SubDownloader
-Comment=Automatic download/upload subtitles for videofiles
+Comment=Application to download/upload subtitles of your movies.
 Comment[pl]=Automatycznie przesyłaj podpisy do plików wideo
-Exec=subdownloader.sh $@
+Exec=subdownloader
+Icon=subdownloader
+MimeType=video/avi;
+StartupNotify=false
 Terminal=false
 Type=Application
-Icon=subdownloader
-Categories=GNOME;AudioVideo;
-# vi:encoding=utf-8
+Categories=GNOME;AudioVideo;Video;
